# movie-booking

./: .gitignore  DECISIONS.md  README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e41d85f26ab5_create_initial_schema.py
backend/app/: main.py
backend/app/api/: health.py
backend/app/core/: config.py
backend/app/db/: base.py
backend/app/models/: __init__.py  booking.py  booking_seat.py  cinema.py  movie.py  payment.py  screen.py  seat.py  showtime.py  user.py
docs/: PROJECT_NOTES.md  PROJECT_NOTES_2.md
