[project]
name = "movie-booking-backend"
version = "0.1.0"
description = "Movie booking app backend — FastAPI + async SQLAlchemy + Redis"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, B: bugbear,
# UP: pyupgrade, SIM: simplify, C4: comprehensions, RUF: ruff-specific
select = ["E", "W", "F", "I", "B", "UP", "SIM", "C4", "RUF"]
ignore = [
  "E501",  # line-too-long — the formatter handles this
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
